# HyperscanWrapper

./: CMakeLists.txt  README.md
benchmark/: PatternSearchBenchmark.h  benchmarks.cpp  benchmarks.h
doxygen/: config.txt
include/: Hyperscan.h  HyperscanWithEscapedCharacter.h
resources/: war_peace
source/: main.cpp
test/: BoostScan.h  HyperscanTests.cpp  HyperscanWithEscapedCharacterTests.cpp  LinearSearch.h
